--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "sweetalert2": "^11.19.1",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
